# SRMP

./: .gitignore  CHANGES.TXT  CMakeLists.txt  Makefile  README.TXT  README.md  SRMP.h  example.cpp
Algs/: AddEdges.cpp  CMP.cpp  MPLP.cpp  PQ.h  SRMP.cpp  block.h  debug.cpp  energy.cpp  order.cpp  timer.h  triplets.cpp  util.h
FactorTypes/: GeneralType.cpp  GeneralType.h  PairwiseDualType.cpp  PairwiseDualType.h  PairwiseType.cpp  PairwiseType.h  PatternType.cpp  PatternType.h  PottsType.cpp  PottsType.h  SharedPairwiseType.cpp  SharedPairwiseType.h
include/srmp/: SRMP.h
include/srmp/Algs/: PQ.h  timer.h
include/srmp/FactorTypes/: GeneralType.h  PottsType.h  SharedPairwiseType.h
src/Algs/: AddEdges.cpp  CMP.cpp  MPLP.cpp  SRMP.cpp  debug.cpp  energy.cpp  order.cpp  triplets.cpp
src/FactorTypes/: GeneralType.cpp  PairwiseDualType.cpp  PairwiseType.cpp  PatternType.cpp  PottsType.cpp  SharedPairwiseType.cpp
src/examples/: example.cpp
win/: win.sln  win.vcxproj  win.vcxproj.filters
